@@ -1,5 +1,8 @@
-This is gnome-user-share 0.6, a system for easy sharing of user files.
+This is gnome-user-share 0.7, a system for easy sharing of user files.
 	
+Major changes since 0.6 are:
+* Added desktop file
+
 Major changes since 0.5 are:
 * Avahi support
 * Fix sign warnings
